# sunny-tech-2022

./: .gitpod.yml  README.md  TODO.md  package-lock.json  run-one-slide.sh  run-slides.sh  slides.sh
.devcontainer/: devcontainer.json
00-c-web/: README.md  TODO.md  build.sh  index.html  main.c  manifest.json  serve.sh  style.css
01-go-hello/: .gitignore  1.sh  TODO.md  main.go  serve.sh
02-go-dom/: go.mod  index.html
02-js-boids/: README.md  TODO.md  serve.sh  server.js
02-wasm-go-boids/: 1.sh  README.md  TODO.md  build.go.sh  go.mod  main.go  serve.sh  server.js
03-go-call-go-function/: go.mod  index.html  main.go
03-nodejs-rust-function/: 1.sh  TODO.md
04-go-return-json/: index.html  main.go
05-go-json-as-parameter/: index.html
05-go-sat/: .gitignore  1.sh  TODO.md
06-go-call-a-js-function/: index.html
06-wasi-asp-dotnet/: 1.sh  2.sh  3.sh  README.md  TODO.md  setup.sh
07-go-call-js-promise/: build.tinygo.sh  index.html  main.go
07-sat/: TODO.md  as-serve.sh  serve-js.sh
08-rust-hello/: README.md  index.html
09-rust-call-with-json/: README.md
09-rust-call-with-json/hello/: Cargo.toml
10-rust-dom/: .gitignore
10-rust-dom/hello/: Cargo.toml
10-rust-dom/hello/src/: lib.rs
11-nodejs-go-function/: README.md  index.js  main.go
14-rust-wasi-cli-function/: README.md  run.sh
15-go-wasmedge-cli/: .gitignore  go.mod
16-go-wasmedge-function/: README.md  main.go  wasmedge-function
17-dotnet-wasi-cli-app/: README.md  build.sh
18-dotnet-wasi-asp/: build.sh  run.sh
19-go-wasmedge-strings/: .gitignore  build.sh  go.mod  main.go
(+177 files in other folders)
