[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello"
path = "src/lib.rs"
crate-type =["cdylib"]

#[dependencies]
#wasm-bindgen = "0.2.50"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"] }
